<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Register"
    android:padding="15dp"
    android:background="@color/lavender">

    <TextView
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#FFFFFFFF"
        android:layout_marginBottom="20dp"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:textColor="#FFFFFF"
        android:padding="6dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_border" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="6dp"
        android:hint="@string/password"
        android:textColorHint="#FFFFFF"
        tools:ignore="TouchTargetSizeCheck"
        android:background="@drawable/custom_border" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_register"
        android:text="Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/loginNow"
        android:text="@string/click_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFFFF" />

</LinearLayout>
